# Sapiens_Ontology

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.langgraph  Makefile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
desktop/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.main.json  tsconfig.main.tsbuildinfo  vite.config.ts
desktop/src/main/: index.ts  preload.ts
desktop/src/renderer/: App.tsx  main.tsx
docs/: ARCHITECTURE.md
sample_QA_Data/: hotpotQA.json
scripts/: backup_neo4j.sh  restore_neo4j.sh
src/: __init__.py
src/api/: __init__.py  langgraph_client.py  main.py
src/benchmark/: __init__.py  runner.py  scenarios.py
src/config/: settings.py
src/core/: __init__.py  cache.py  circuit_breaker.py
src/graph/: __init__.py  community.py  neo4j_client.py  query_optimizer.py  schema.py
src/graph/backup/: __init__.py  backup_manager.py  recovery_manager.py
src/graph/integrity/: __init__.py  integrity_checker.py  integrity_repair.py
src/graph/lifecycle/: __init__.py  soft_delete.py  timestamps.py
src/graph/migrations/: __init__.py  base_migration.py  migration_manager.py
src/langgraph_server/: __init__.py  graph.py
src/llm/: __init__.py  cached_embeddings.py  provider.py
src/observability/: __init__.py  alerting.py  correlation.py  logging.py  metrics.py  telemetry.py  tracing.py
src/sddi/: __init__.py  pipeline.py  reliable_pipeline.py  state.py
src/sddi/chunkers/: __init__.py  structure_aware_chunker.py
src/sddi/distributed/: __init__.py  coordinator.py  worker.py
src/sddi/document_loaders/: __init__.py  base.py  csv_loader.py  (+9 more)
src/security/: __init__.py  authentication.py  authorization.py
src/text2cypher/: __init__.py  examples.py  generator.py  prompts.py  validator.py
src/tog/: __init__.py  advanced_synthesizer.py  negative_evidence.py  prompts.py  state.py  temporal_reasoning.py
src/validation/: __init__.py  context_extractor.py  pipeline_validator.py  step_validators.py
src/workflow/: __init__.py  graph.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_agents.py  test_cypher_validator.py  test_neo4j_client.py  test_workflow.py
(+57 files in other folders)
